--- a/mini_amazon/templates/results.html
+++ b/mini_amazon/templates/results.html
@@ -35,6 +35,27 @@
         <input type="submit" value="Update">
     </form>
 
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+
+  <!-- Identify your business so that you can collect the payments. -->
+  <input type="hidden" name="business" value="balumatta01@gmail.com">
+
+  <!-- Specify a Buy Now button. -->
+  <input type="hidden" name="cmd" value="_xclick">
+
+  <!-- Specify details about the item that buyers will purchase. -->
+  <input type="hidden" name="item_name" value="{{ res.product_name }}">
+  <input type="hidden" name="amount" value="{{ res.cost }}">
+  <input type="hidden" name="currency_code" value="INR">
+
+  <!-- Display the payment button. -->
+  <br><input type="image" name="submit" border="0"
+  src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif"
+  alt="Buy Now">
+  <img alt="" border="0" width="1" height="1"
+  src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+
+</form>
 </div>
 <hr>
 {% endfor %}
