added check out cart

--- a/mini_amazon/templates/home.html
+++ b/mini_amazon/templates/home.html
@@ -19,6 +19,10 @@
   <input type="submit" value="Click here if you want to list all products" >
 </form>
 
+<form  action="/cart" method="GET">
+  <input type="submit" value="Go To Cart" >
+</form>
+
 <form  action="/logout" method="GET">
   <input type="submit" value="Click here to Logout" >
 </form>
