--- a/mini_amazon/templates/index.html
+++ b/mini_amazon/templates/index.html
@@ -32,7 +32,7 @@
     user name:<br>
   <input type="text" name="userName" required><br>
   password:<br>
-  <input type="text" name="password" required><br>
+  <input type="password" name="password" required><br>
      <input type="submit" value="Login">
 </form>
 
@@ -45,9 +45,9 @@
     user name:<br>
   <input type="text" name="userName" required><br>
   password:<br>
-  <input type="text" name="password"  id="password" required><br>
+  <input type="password" name="password"  id="password" required><br>
     confirm password: <br>
-    <input type="text" name="confirmPassword" id="confirmPassword" required><br>
+    <input type="password" name="confirmPassword" id="confirmPassword" required><br>
      <input type="submit" value="Sign Up" id="signInButton" onclick="signOnClick()">
 </form>
 
